# xrem

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
src/: App.svelte  db.rs  main.rs  styles.css  video.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs  server.rs
src-tauri/src/core/: core.rs  db.rs  embed.rs  mod.rs  video.rs
src/routes/: +page.svelte
src/routes/search/: +page.svelte  Search.svelte  SearchBar.svelte  ThumbnailCard.svelte
src/routes/timeline/: +page.svelte
