[package]
name = "xrem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3

[dependencies]
# GUI and system interaction
wry = "0.35.1"
winit = "0.29.8"

# Cross-platform screen capture
screenshots = "0.8.6"

# threadpool
threadpool = "1.8.1"

# Image processing
image = "0.24.7"

# OCR
rusty-tesseract = "1.1.9"

# Dates
chrono = "0.4.31"

duckdb = { version = "0.9.2", features = ["bundled", "chrono"] }

# FFmpeg bindings
ffmpeg-next = "6.1.0"

# Embeddings
candle = { package = "candle-core", version = "0.3.2" }
candle-nn = "0.3.2"
candle-transformers = "0.3.2"
tokenizers = "0.15.0"
lazy_static = "1.4.0"
serde_json = "1.0"
