[package]
name = "xrem"
version = "0.0.0"
description = "A Tauri App"
authors = ["Jason McGhee <mcghee.j@gmail.com>"]
license = "MIT"
repository = "jasonjmcghee/xrem"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cross-platform screen capture
screenshots = "0.8.6"

# threadpool
threadpool = "1.8.1"

# Image processing
image = "0.24.7"

# OCR
rusty-tesseract = "1.1.9"

# Dates
chrono = "0.4.31"

duckdb = { version = "0.9.2", features = ["bundled", "chrono"] }

# FFmpeg bindings
ffmpeg-next = "6.1.0"

# Embeddings
candle = { package = "candle-core", version = "0.3.2" }
candle-nn = "0.3.2"
candle-transformers = "0.3.2"
tokenizers = "0.15.0"
lazy_static = "1.4.0"
base64 = "0.21.7"

# Server
axum = "0.7.4"
tokio = { version = "1", features = ["full"] }
hyper = "1.1"

[profile.release]
opt-level = 3

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
